// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackerCard /> by default matches with snapshot 1`] = `
<div
  className="sc-dkPtRN gRWzMW"
>
  <div
    className="sc-bdvvtL bFaRXD"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-small k-u-weight-500"
    >
      Backer name
    </span>
  </div>
  <div
    className="sc-bdvvtL kDDJrJ"
  >
    <span
      className="sc-gsDKAQ bkhteQ k-ButtonImage k-ButtonImage--medium k-ButtonImage--withoutPointerEvents sc-eCImPb bXGXzj"
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="sc-bdvvtL jMBxLn"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-400 k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`<BackerCard /> with subtitle prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN gRWzMW"
>
  <div
    className="sc-bdvvtL bFaRXD"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-small k-u-weight-500"
    >
      Backer name
      <span
        className="k-u-color-font1 k-u-size-micro k-u-weight-400 sc-hKwDye lnIyHp"
      >
        Subtitle
      </span>
    </span>
  </div>
  <div
    className="sc-bdvvtL kDDJrJ"
  >
    <span
      className="sc-gsDKAQ bkhteQ k-ButtonImage k-ButtonImage--medium k-ButtonImage--withoutPointerEvents sc-eCImPb bXGXzj"
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="sc-bdvvtL jMBxLn"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-400 k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;
